--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
             android:theme="@style/NoTitleDialog"
             android:windowSoftInputMode="adjustResize|stateHidden"/>
         <activity
+            android:name=".activities.PointActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/NoTitleDialog"
+            android:windowSoftInputMode="adjustResize|stateHidden"/>
+        <activity
             android:name=".activities.UseActivity"
             android:screenOrientation="landscape"
             android:theme="@style/NoTitleDialog"
