--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,15 @@
             android:screenOrientation="landscape"
             android:theme="@style/NoTitleDialog"
             android:windowSoftInputMode="adjustResize|stateHidden" />
+        <activity
+            android:name=".activities.ContractWriteActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/NoTitleDialog"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
+        <activity
+            android:name=".activities.DlgSignActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/full_screen_dialog1" />
 
         <activity
             android:name=".activities.UseActivity"
